fixes bug 246193 "Mozilla doesn't revert to IPv4 if IPv6 connect fails" r=lorenzo